--- a/nixpacks.toml
+++ b/nixpacks.toml
@@ -1,9 +1,6 @@
 # Nixpacks configuration for Railway
-[phases.setup]
-nixPkgs = ["python311"]
-
 [phases.install]
 cmds = ["pip install -r requirements.txt"]
 
 [start]
-cmd = "python -m web.api"
+cmd = "python web/api.py"
