--- a/requirements.txt
+++ b/requirements.txt
@@ -10,6 +10,7 @@ python-dotenv>=1.0.0
 requests>=2.32.5
 httpx>=0.25.0
 gunicorn>=21.0.0
+resend>=0.7.0
 
 # Optional: for mesh processing (comment out if not needed)
 # trimesh>=4.11.1
